# Ai-Blogger-Agent

./: .gitignore  DEPLOYMENT.md  README.md  README_WEB.md
backend/: api.py  main.py  pyproject.toml  requirements.txt  supabase_storage.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/docs/: page.tsx
frontend/app/posts/[filename]/: page.tsx
frontend/components/: BlogGenerator.tsx  BlogList.tsx  MarkdownRenderer.tsx  dynamic-background.tsx  footer.tsx  mode-toggle.tsx  navbar.tsx
frontend/lib/: api.ts
frontend/public/: manifest.json
